{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 11,
  "lineage": "7c37edea-bb19-e925-c1da-709bf4ccdb0f",
  "resources": [
    {
      "module": "module.jt_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:985123573158:internet-gateway/igw-0c385d834c86c0af4",
            "id": "igw-0c385d834c86c0af4",
            "owner_id": "985123573158",
            "tags": {
              "Name": "jt-InternetGateway"
            },
            "tags_all": {
              "Name": "jt-InternetGateway"
            },
            "vpc_id": "vpc-0aa86dadb928858cc"
          },
          "dependencies": [
            "module.jt_vpc.aws_vpc.jt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jt_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:985123573158:route-table/rtb-0b496fac233685e3e",
            "id": "rtb-0b496fac233685e3e",
            "owner_id": "985123573158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c385d834c86c0af4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jt-rt"
            },
            "tags_all": {
              "Name": "jt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa86dadb928858cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jt_vpc.aws_internet_gateway.igw",
            "module.jt_vpc.aws_vpc.jt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jt_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b98dbcb6788754fe",
            "route_table_id": "rtb-0b496fac233685e3e",
            "subnet_id": "subnet-05860bde3c38416f2"
          },
          "dependencies": [
            "module.jt_vpc.aws_internet_gateway.igw",
            "module.jt_vpc.aws_route_table.jt_rt",
            "module.jt_vpc.aws_subnet.main",
            "module.jt_vpc.aws_vpc.jt_vpc",
            "module.jt_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ffe1a68bc7894ee",
            "route_table_id": "rtb-0b496fac233685e3e",
            "subnet_id": "subnet-0fa3124ff33ecb769"
          },
          "dependencies": [
            "module.jt_vpc.aws_internet_gateway.igw",
            "module.jt_vpc.aws_route_table.jt_rt",
            "module.jt_vpc.aws_subnet.main",
            "module.jt_vpc.aws_vpc.jt_vpc",
            "module.jt_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.jt_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:985123573158:subnet/subnet-05860bde3c38416f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05860bde3c38416f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985123573158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-0aa86dadb928858cc"
          },
          "dependencies": [
            "module.jt_vpc.aws_vpc.jt_vpc",
            "module.jt_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:985123573158:subnet/subnet-0fa3124ff33ecb769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa3124ff33ecb769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985123573158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubliSubnet2"
            },
            "tags_all": {
              "Name": "PubliSubnet2"
            },
            "vpc_id": "vpc-0aa86dadb928858cc"
          },
          "dependencies": [
            "module.jt_vpc.aws_vpc.jt_vpc",
            "module.jt_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.jt_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:985123573158:vpc/vpc-0aa86dadb928858cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0076f7b0ab96fdb69",
            "default_route_table_id": "rtb-01fe959e2e1cab3e7",
            "default_security_group_id": "sg-0391cfcfd2f50905e",
            "dhcp_options_id": "dopt-0a0222570b003c520",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa86dadb928858cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fe959e2e1cab3e7",
            "owner_id": "985123573158",
            "tags": {
              "Name": "jt_vpc"
            },
            "tags_all": {
              "Name": "jt_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:985123573158:security-group/sg-039f0471b63229ef2",
            "description": "Allow inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039f0471b63229ef2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "985123573158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jt-securitygroup"
            },
            "tags_all": {
              "Name": "jt-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa86dadb928858cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jt_vpc.aws_vpc.jt_vpc"
          ]
        }
      ]
    }
  ]
}